--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,10 @@
     <img src="" alt="kcire photo"/>
 
     <nav>
-        
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/projects">Projects</a>
+        <a href="/contact">Contact</a>
     </nav>
 
 </header>
