--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/global.css"
+import Header from "../components/Header.astro"
 ---
 <!doctype html>
 <html lang="es">
@@ -11,15 +11,19 @@ import "../styles/global.css"
 		<title>Astro Basics</title>
 	</head>
 	<body>
+		<Header/>
 		<slot />
 	</body>
 </html>
 
-<style>
-	html,
+<style is:global>
+	:root{
+
+	}
+	html{
+		font-family: system-ui, sans-serif;
+	}
 	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+		
 	}
 </style>
