--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,10 @@
-<header class="flex justify-between">
-    <img src="" alt="kcire photo"/>
+<header class="flex justify-between items-center py-3 w-[1120px]">
+  <img class="rounded-full w-12 h-12" src="/images/kcire1.png" alt="kcire photo" />
 
-    <nav>
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/projects">Projects</a>
-        <a href="/contact">Contact</a>
-    </nav>
-
+  <nav>
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="/projects">Projects</a>
+    <a href="/contact">Contact</a>
+  </nav>
 </header>
