--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,29 +1,31 @@
 ---
-import Header from "../components/Header.astro"
+import Header from '../components/Header.astro';
 ---
+
 <!doctype html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<Header/>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro Basics</title>
+  </head>
+  <body>
+    <Header />
+    <slot />
+  </body>
+
+  <style is:global>
+    :root {
+    }
+    html {
+      font-family: system-ui, sans-serif;
+    }
+    body {
+      background: #000;
+      display: flex;
+      justify-content: center;
+    }
+  </style>
 </html>
-
-<style is:global>
-	:root{
-
-	}
-	html{
-		font-family: system-ui, sans-serif;
-	}
-	body {
-		
-	}
-</style>
