--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,14 +18,16 @@ import Header from '../components/Header.astro';
 
   <style is:global>
     :root {
+      color-scheme: light dark;
     }
     html {
       font-family: system-ui, sans-serif;
     }
     body {
-      background: #000;
+      background: #2725257c;
       display: flex;
       justify-content: center;
+      min-height: 100vh;
     }
   </style>
 </html>
