--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 <header class="flex justify-between items-center py-3 w-[1120px]">
   <img class="rounded-full w-12 h-12" src="/images/kcire1.png" alt="kcire photo" />
 
-  <nav>
+  <nav class="flex flex-row gap-x-10 opacity-80">
     <a href="/">Home</a>
     <a href="/about">About</a>
     <a href="/projects">Projects</a>
