--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,5 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		<h1>Porfolio</h1>
-	</main>
+  <main></main>
 </Layout>
