--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,11 @@
 ---
 import Header from '../components/Header.astro';
+import '@fontsource-variable/onest';
+
+interface Props {
+  title: string;
+}
+const { title } = Astro.props;
 ---
 
 <!doctype html>
@@ -9,7 +15,7 @@ import Header from '../components/Header.astro';
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro Basics</title>
+    <title>{title}</title>
   </head>
   <body>
     <Header />
@@ -21,7 +27,7 @@ import Header from '../components/Header.astro';
       color-scheme: light dark;
     }
     html {
-      font-family: system-ui, sans-serif;
+      font-family: 'Onest Variable', system-ui, sans-serif;
     }
     body {
       background: #2725257c;
