--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,6 +32,7 @@ const { title } = Astro.props;
     body {
       background: #2725257c;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       min-height: 100vh;
     }
