--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Badge from '../components/Badge.astro';
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 
@@ -7,5 +8,9 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-  <main></main>
+  <main>
+    <h1 class="text-white">¡Hola! Soy Erick <Badge>Disponible para trabajar</Badge></h1>
+    <h2>Ingeniero de Sistemas y Desarrollador Backend de Ibagué, Colombia 🇨🇴.</h2>
+    <ul></ul>
+  </main>
 </Layout>
