Update owner information style

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,10 +19,16 @@ const { title } = Astro.props;
   </head>
 
   <body>
-    <Header />
-    <slot />
+    <div class="relative h-full w-full bg-slate-950">
+      <div
+        class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_500px_at_50%_200px,#3e3e3e,transparent)]">
+      </div>
+    </div>
   </body>
+  <Header />
+  <slot />
 </html>
+
 <style is:global>
   :root {
     color-scheme: light dark;
