Add social media icons

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Badge from '../components/Badge.astro';
 import Layout from '../layouts/Layout.astro';
+import LinkedInIcon from '../components/icons/LinkedIn.astro';
+import SocialPill from '../components/SocialPill.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -22,7 +24,14 @@ import Layout from '../layouts/Layout.astro';
         <span class="text-red-200/90">Ingeniero de Sistemas y Desarrollador Backend</span>
         <span class="text-yellow-100/90">de Ibagué, Colombia 🇨🇴.</span>
       </h2>
-      <ul></ul>
+      <ul>
+        <li>
+          <SocialPill>
+            <LinkedInIcon class="w-6 h-6" LinkedIn < a />
+            LinkedIn
+          </SocialPill>
+        </li>
+      </ul>
     </section>
-  </main>
-</Layout>
+  </main></Layout
+>
