Add github icon

--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -1,3 +1,5 @@
-<a href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/">
+<a
+  class="rounded-full border border-white/10 flex justify-center items-center"
+  href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/">
   <slot />
 </a>
