--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,12 +25,16 @@ import SocialPill from '../components/SocialPill.astro';
         <span class="text-yellow-100/90">de Ibagué, Colombia 🇨🇴.</span>
       </h2>
       <ul>
-        <li>
+        <nav class="flex gap-x-2">
+          <SocialPill>
+            <LinkedInIcon class="w-6 h-6" GitHub < a />
+            GitHub
+          </SocialPill>
           <SocialPill>
             <LinkedInIcon class="w-6 h-6" LinkedIn < a />
             LinkedIn
           </SocialPill>
-        </li>
+        </nav>
       </ul>
     </section>
   </main></Layout
