--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,40 +3,46 @@ import Badge from '../components/Badge.astro';
 import Layout from '../layouts/Layout.astro';
 import LinkedInIcon from '../components/icons/LinkedIn.astro';
 import GitHubIcon from '../components/icons/GitHub.astro';
+import MailIcon from '../components/icons/Mail.astro';
 import SocialPill from '../components/SocialPill.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout
+  title="Porfolio de Erick - Desarrollador Backend "
+  description="Contrata a Erick Reinoso, Desarrollador Backend especializado en Java y Spring Boot. Ingeniero de Sistemas enfocado en construir arquitecturas sólidas, seguras y eficientes para aplicaciones web modernas."
   <main>
-    <section class="w-full lg:w-[740px] mx-auto py-44">
-      <img class="rounded-full w-12 h-12 mb-4" src="/images/kcire1.png" alt="kcire photo" />
-      <h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-10">
-        ¡Hola! Soy Erick <a
-          href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/"
-          target="_blank"
-          rel="noopener"
-          class="flex justify-center items-center"><Badge>Disponible para trabajar</Badge></a
-        >
-      </h1>
-      <h2 class="text-2xl opacity-80 text-wrap">
-        <span class="text-red-200/90">Ingeniero de Sistemas y Desarrollador Backend</span>
-        <span class="text-yellow-100/90">de Ibagué, Colombia 🇨🇴.</span>
-      </h2>
-      <ul>
-        <nav class="flex gap-x-2 mt-4">
-          <SocialPill href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/">
-            <LinkedInIcon class="w-6 h-6" LinkedIn < a />
-            LinkedIn
-          </SocialPill>
-          <SocialPill href="https://github.com/Kcireog">
-            <GitHubIcon class="w-6 h-6" GitHub < a />
-            GitHub
-          </SocialPill>
-        </nav>
-      </ul>
-    </section>
-  </main></Layout
->
+  <section class="w-full lg:w-[740px] mx-auto py-44">
+    <img class="rounded-full w-12 h-12 mb-4" src="/images/kcire1.png" alt="kcire photo" />
+    <h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-10">
+      ¡Hola! Soy Erick <a
+        href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/"
+        target="_blank"
+        rel="noopener"
+        class="flex justify-center items-center"><Badge>Disponible para trabajar</Badge></a
+      >
+    </h1>
+    <h2 class="text-2xl opacity-80 text-wrap">
+      <span class="text-red-200/90">Ingeniero de Sistemas y Desarrollador Backend</span>
+      <span class="text-yellow-100/90">de Ibagué, Colombia 🇨🇴.</span>
+    </h2>
+    <ul>
+      <nav class="flex gap-x-4 mt-4">
+        <SocialPill href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/">
+          <LinkedInIcon class="w-6 h-6" LinkedIn < a />
+          LinkedIn
+        </SocialPill>
+        <SocialPill href="https://github.com/Kcireog">
+          <GitHubIcon class="w-6 h-6" GitHub < a />
+          GitHub
+        </SocialPill>
+        <SocialPill href="mailto:prueba@gmail.com">
+          <MailIcon class="w-6 h-6" Mail < a />
+          prueba@gmail.com
+        </SocialPill>
+      </nav>
+    </ul>
+  </section>
+</Layout>
