--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import LinkedInIcon from '../components/icons/LinkedIn.astro';
 import GitHubIcon from '../components/icons/GitHub.astro';
 import MailIcon from '../components/icons/Mail.astro';
 import SocialPill from '../components/SocialPill.astro';
+import Experience from '../components/Experience.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -28,21 +29,24 @@ import SocialPill from '../components/SocialPill.astro';
       <span class="text-red-200/90">Ingeniero de Sistemas y Desarrollador Backend</span>
       <span class="text-yellow-100/90">de Ibagué, Colombia 🇨🇴.</span>
     </h2>
-    <ul>
-      <nav class="flex gap-x-4 mt-4">
-        <SocialPill href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/">
-          <LinkedInIcon class="w-6 h-6" LinkedIn < a />
-          LinkedIn
-        </SocialPill>
-        <SocialPill href="https://github.com/Kcireog">
-          <GitHubIcon class="w-6 h-6" GitHub < a />
-          GitHub
-        </SocialPill>
-        <SocialPill href="mailto:prueba@gmail.com">
-          <MailIcon class="w-6 h-6" Mail < a />
-          prueba@gmail.com
-        </SocialPill>
-      </nav>
-    </ul>
+
+    <nav class="flex gap-x-4 mt-4">
+      <SocialPill href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/">
+        <LinkedInIcon class="w-6 h-6" LinkedIn < a />
+        LinkedIn
+      </SocialPill>
+      <SocialPill href="https://github.com/Kcireog">
+        <GitHubIcon class="w-6 h-6" GitHub < a />
+        GitHub
+      </SocialPill>
+      <SocialPill href="mailto:prueba@gmail.com">
+        <MailIcon class="w-6 h-6" Mail < a />
+        prueba@gmail.com
+      </SocialPill>
+    </nav>
+  </section>
+
+  <section>
+    <Experience />
   </section>
 </Layout>
