--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -9,12 +9,12 @@ const EXPERIENCE = [
     description: '',
     link: '#',
   },
-  {
-    date: '',
-    title: '',
-    description: '',
-    link: '#',
-  },
+  // {
+  //   date: '',
+  //   title: '',
+  //   description: '',
+  //   link: '#',
+  // },
 ];
 ---
 
@@ -22,7 +22,8 @@ const EXPERIENCE = [
   {
     EXPERIENCE.map((experience) => (
       <li class="mb-10 ms-4">
-        <ExperienceItem {...experience} />
+        {/* <ExperienceItem {...experience} /> */}
+        <p class="text-xl">Coming soon...</p>
       </li>
     ))
   }
