--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ import SectionContainer from '../components/SectionContainer.astro';
     </nav>
   </SectionContainer>
 
-  <SectionContainer>
+  <SectionContainer id="experiencia">
     <h2 class="text-2xl font-semibold mb-5 flex gap-x-3 items-center">
       <BriefCaseIcon class="w-7 h-7" />
       Experiencia Laboral
