--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -23,7 +23,7 @@ const EXPERIENCE = [
     EXPERIENCE.map((experience) => (
       <li class="mb-10 ms-4">
         {/* <ExperienceItem {...experience} /> */}
-        <p class="text-xl">Coming soon...</p>
+        <p class="text-xl">Muy pronto...</p>
       </li>
     ))
   }
