--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -1,5 +1,5 @@
 ---
-const { class: className } = Astro.props;
+const { class: className, id } = Astro.props;
 ---
 
-<section class={`w-full lg:w-[740px] mx-auto ${className}`}><slot /></section>
+<section id={id} class={`w-full lg:w-[740px] mx-auto ${className}`}><slot /></section>
