--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,8 +28,8 @@ import SectionContainer from '../components/SectionContainer.astro';
       >
     </h1>
     <h2 class="text-2xl opacity-80 text-wrap">
-      <span class="text-red-200/90">Ingeniero de Sistemas y Desarrollador Backend</span>
-      <span class="text-yellow-100/90">de Ibagué, Colombia 🇨🇴.</span>
+      <span class="text-yellow-100/90">Ingeniero de Sistemas y Desarrollador Backend</span>
+      <span class="text-red-200/90">de Ibagué, Colombia 🇨🇴.</span>
     </h2>
 
     <nav class="flex gap-x-4 mt-4">
