--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,44 +15,45 @@ import SectionContainer from '../components/SectionContainer.astro';
 
 <Layout
   title="Porfolio de Erick - Desarrollador Backend "
-  description="Contrata a Erick Reinoso, Desarrollador Backend especializado en Java y Spring Boot. Ingeniero de Sistemas enfocado en construir arquitecturas sólidas, seguras y eficientes para aplicaciones web modernas."
-  <main>
-  <SectionContainer class="py-44 pb-25">
-    <img class="rounded-full w-12 h-12 mb-4" src="/images/kcire1.png" alt="kcire photo" />
-    <h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-10">
-      ¡Hola! Soy Erick <a
-        href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/"
-        target="_blank"
-        rel="noopener"
-        class="flex justify-center items-center"><Badge>Disponible para trabajar</Badge></a
-      >
-    </h1>
-    <h2 class="text-2xl opacity-80 text-wrap">
-      <span class="text-yellow-100/90">Ingeniero de Sistemas y Desarrollador Backend</span>
-      <span class="text-red-200/90">de Ibagué, Colombia 🇨🇴.</span>
-    </h2>
+  description="Contrata a Erick Reinoso, Desarrollador Backend especializado en Java y Spring Boot. Ingeniero de Sistemas enfocado en construir arquitecturas sólidas, seguras y eficientes para aplicaciones web modernas.">
+  <main class="px-4">
+    <SectionContainer class="py-44 pb-25">
+      <img class="rounded-full w-12 h-12 mb-4" src="/images/kcire1.png" alt="kcire photo" />
+      <h1 class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10">
+        ¡Hola! Soy Erick <a
+          href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/"
+          target="_blank"
+          rel="noopener"
+          class="flex justify-center items-center"><Badge>Disponible para trabajar</Badge></a
+        >
+      </h1>
+      <h2 class="text-xl lg:text-2xl text-wrap max-w-[700px]">
+        <span class="text-yellow-100/90">Ingeniero de Sistemas y Desarrollador Backend</span>
+        <span class="text-red-200/90">de Ibagué, Colombia 🇨🇴.</span>
+      </h2>
 
-    <nav class="flex gap-x-4 mt-4">
-      <SocialPill href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/">
-        <LinkedInIcon class="w-6 h-6" LinkedIn < a />
-        LinkedIn
-      </SocialPill>
-      <SocialPill href="https://github.com/Kcireog">
-        <GitHubIcon class="w-6 h-6" GitHub < a />
-        GitHub
-      </SocialPill>
-      <SocialPill href="mailto:prueba@gmail.com">
-        <MailIcon class="w-6 h-6" Mail < a />
-        prueba@gmail.com
-      </SocialPill>
-    </nav>
-  </SectionContainer>
+      <nav class="flex gap-4 mt-4 flex-wrap">
+        <SocialPill href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/">
+          <LinkedInIcon class="w-4 md:w-6 h-6" LinkedIn < a />
+          LinkedIn
+        </SocialPill>
+        <SocialPill href="https://github.com/Kcireog">
+          <GitHubIcon class="w-4 md:w-6 h-6" GitHub < a />
+          GitHub
+        </SocialPill>
+        <SocialPill href="mailto:prueba@gmail.com">
+          <MailIcon class="w-4 md:w-6 h-6" Mail < a />
+          prueba@gmail.com
+        </SocialPill>
+      </nav>
+    </SectionContainer>
 
-  <SectionContainer id="experiencia">
-    <h2 class="text-2xl font-semibold mb-5 flex gap-x-3 items-center">
-      <BriefCaseIcon class="w-7 h-7" />
-      Experiencia Laboral
-    </h2>
-    <Experience />
-  </SectionContainer>
+    <SectionContainer id="experiencia">
+      <h2 class="text-2xl font-semibold mb-5 flex gap-x-3 items-center">
+        <BriefCaseIcon class="w-7 h-7" />
+        Experiencia Laboral
+      </h2>
+      <Experience />
+    </SectionContainer>
+  </main>
 </Layout>
