--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import LinkedInIcon from '../components/icons/LinkedIn.astro';
 import GitHubIcon from '../components/icons/GitHub.astro';
 import MailIcon from '../components/icons/Mail.astro';
 import BriefCaseIcon from '../components/icons/BriefCase.astro';
+import CodeIcon from '../components/icons/Code.astro';
 import SocialPill from '../components/SocialPill.astro';
 import Experience from '../components/Experience.astro';
 import SectionContainer from '../components/SectionContainer.astro';
@@ -52,6 +53,13 @@ import SectionContainer from '../components/SectionContainer.astro';
       <h2 class="text-2xl font-semibold mb-5 flex gap-x-3 items-center">
         <BriefCaseIcon class="w-7 h-7" />
         Experiencia Laboral
+      </h2>
+      <Experience />
+    </SectionContainer>
+    <SectionContainer id="experiencia">
+      <h2 class="text-2xl font-semibold mb-5 flex gap-x-3 items-center">
+        <CodeIcon class="w-7 h-7" />
+        Proyectos
       </h2>
       <Experience />
     </SectionContainer>
