--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import BriefCaseIcon from '../components/icons/BriefCase.astro';
 import CodeIcon from '../components/icons/Code.astro';
 import SocialPill from '../components/SocialPill.astro';
 import Experience from '../components/Experience.astro';
+import Projects from '../components/Projects.astro';
 import SectionContainer from '../components/SectionContainer.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -61,7 +62,7 @@ import SectionContainer from '../components/SectionContainer.astro';
         <CodeIcon class="w-7 h-7" />
         Proyectos
       </h2>
-      <Experience />
+      <Projects />
     </SectionContainer>
   </main>
 </Layout>
