--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -10,3 +10,18 @@ const PROJECTS = [
   },
 ];
 ---
+
+{
+  PROJECTS.map(({ image, title, description, tags }) => (
+    <article>
+      <h3>{title}</h3>
+      <p>{description}</p>
+      <ul>
+        {tags.map((tag) => (
+          <li>{tag}</li>
+        ))}
+      </ul>
+      <img src="" alt={`Captura de pantalla del proyecto ${image}`} />
+    </article>
+  ))
+}
