--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,35 +21,32 @@ const { description, title } = Astro.props;
     <title>{title}</title>
   </head>
 
-  <body>
-    <div class="relative h-full w-full bg-slate-950">
-      <div
-        class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_500px_at_50%_200px,#3e3e3e,transparent)]">
-      </div>
+  <body class="relative text-black dark:text-white">
+    <div
+      class="absolute top-0 bottom-0 z-[-2] min-h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]">
     </div>
+    <Header />
+    <slot />
+    <Footer />
+    <style is:global>
+      :root {
+        color-scheme: light dark;
+      }
+      html {
+        font-family: 'Onest Variable', system-ui, sans-serif;
+        scroll-behavior: smooth;
+      }
+      body {
+        background: #2725257c;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+      }
+      @media (prefers-reduced-motion: reduce) {
+        html {
+          scroll-behavior: auto;
+        }
+      }
+    </style>
   </body>
-  <Header />
-  <slot />
-  <Footer />
 </html>
-
-<style is:global>
-  :root {
-    color-scheme: light dark;
-  }
-  html {
-    font-family: 'Onest Variable', system-ui, sans-serif;
-    scroll-behavior: smooth;
-  }
-  body {
-    background: #2725257c;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  @media (prefers-reduced-motion: reduce) {
-    html {
-      scroll-behavior: auto;
-    }
-  }
-</style>
