--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,4 +1,18 @@
 ---
+import Java from '../components/icons/Java.astro';
+import SpringBoot from '../components/icons/SpringBoot.astro';
+const TAGS = {
+  SPRING: {
+    name: 'Spring Boot',
+    class: 'bg-black text-white',
+    icon: SpringBoot,
+  },
+  JAVA: {
+    name: 'Java',
+    class: 'bg-black text-white',
+    icon: Java,
+  },
+};
 const PROJECTS = [
   {
     title: 'LiterAlura',
@@ -6,7 +20,7 @@ const PROJECTS = [
     link: '#',
     github: 'https://github.com/Kcireog/LiterAlura',
     image: '/projects/literaluraProject.webp',
-    tags: ['Java', 'Spring Boot'],
+    tags: [TAGS.JAVA, TAGS.SPRING],
   },
 ];
 ---
@@ -16,9 +30,14 @@ const PROJECTS = [
     <article>
       <h3 class="text-2xl font-semibold text-yellow-200 mb-2">{title}</h3>
       <p class="text-lg mb-4 text-pretty">{description}</p>
-      <ul>
+      <ul class="flex gap-x-4 flex-row">
         {tags.map((tag) => (
-          <li>{tag}</li>
+          <li>
+            <span class={`flex gap-x-2 rounded-full text-xs ${tag.class}`}>
+              <tag.icon class="h-4 w-4" />
+              {tag.name}
+            </span>
+          </li>
         ))}
       </ul>
       <img class="rounded shadow-2xl shadow-white/10" src={image} alt={`Captura de pantalla del proyecto ${image}`} />
