--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,11 +1,10 @@
-<footer class="py-20">Aquí estará el footer</footer>
-
-<footer class="bg-white rounded-lg shadow-sm m-4 bg-black/20 backdrop-blur-lg">
+<footer class="rounded-lg shadow-sm m-4 bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10">
   <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
-      >© 2025 <a href="#" class="hover:underline">Kcireog™</a>. Todos los derechos reservados.
+    <span class="text-sm sm:text-center text-yellow-200/90"
+      >© 2025 <a href="https://github.com/Kcireog" class="hover:underline">Kcireog</a>. Con ayuda de midudev, su
+      comunidad y un poco de mí.
     </span>
-    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-white/90 sm:mt-0">
       <li>
         <a href="#" class="hover:underline me-4 md:me-6">Sobre mí</a>
       </li>
