--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ import SectionContainer from '../components/SectionContainer.astro';
       <Experience />
     </SectionContainer>
 
-    <SectionContainer id="experiencia">
+    <SectionContainer id="proyectos">
       <h2 class="text-3xl font-semibold mb-5 flex gap-x-3 items-center">
         <CodeIcon class="w-7 h-7" />
         Proyectos
