--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -4,9 +4,9 @@ import ExperienceItem from './icons/ExperienceItem.astro';
 
 const EXPERIENCE = [
   {
-    date: '',
-    title: '',
-    description: '',
+    date: '19/05/2025',
+    title: 'hola',
+    description: 'estamos aqui',
     link: '#',
   },
   // {
