--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,9 +29,10 @@ import SectionContainer from '../components/SectionContainer.astro';
           class="flex justify-center items-center"><Badge>Disponible para trabajar</Badge></a
         >
       </h1>
-      <h2 class="text-xl lg:text-2xl text-wrap max-w-[700px]">
-        <span class="text-yellow-100/90">Ingeniero de Sistemas y Desarrollador Backend</span>
-        <span class="text-red-200/90">de Ibagué, Colombia 🇨🇴.</span>
+      <h2 class="text-xl lg:text-2xl text-balance max-w-[700px]">
+        <span class="text-yellow-200">Ingeniero de Sistemas y Desarrollador Backend</span>
+        <span class="text-red-200">de Ibagué, Colombia 🇨🇴.</span>
+        <!-- <span class="text-sky-200">Coming soon...</span> -->
       </h2>
 
       <nav class="flex gap-4 mt-4 flex-wrap">
