Add optimized photo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import SectionContainer from '../components/SectionContainer.astro';
   description="Contrata a Erick Reinoso, Desarrollador Backend especializado en Java y Spring Boot. Ingeniero de Sistemas enfocado en construir arquitecturas sólidas, seguras y eficientes para aplicaciones web modernas.">
   <main class="px-4">
     <SectionContainer class="py-44 pb-32">
-      <img class="rounded-full w-12 h-12 mb-4" src="/images/kcire1.png" alt="kcire photo" />
+      <img class="rounded-full w-12 h-12 mb-4" src="/images/Kophoto.webp" alt="kcire photo" />
       <h1 class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10">
         ¡Hola! Soy Erick <a
           href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/"
