Made some tweaks

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -40,7 +40,12 @@ const PROJECTS = [
           </li>
         ))}
       </ul>
-      <img class="rounded shadow-2xl shadow-white/10" src={image} alt={`Captura de pantalla del proyecto ${image}`} />
+      <img
+        loading="lazy"
+        class="rounded shadow-2xl shadow-white/10 aspect-video"
+        src={image}
+        alt={`Captura de pantalla del proyecto ${image}`}
+      />
     </article>
   ))
 }
