Update experience section style

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -7,7 +7,7 @@ const EXPERIENCE = [
     date: '19/05/2025',
     title: 'hola',
     description: 'estamos aqui',
-    link: '#',
+    link: 'https://www.youtube.com/watch?v=atBKaTger1M',
   },
   // {
   //   date: '',
@@ -22,8 +22,8 @@ const EXPERIENCE = [
   {
     EXPERIENCE.map((experience) => (
       <li class="mb-10 ms-4">
-        {/* <ExperienceItem {...experience} /> */}
-        <p class="text-xl">Muy pronto...</p>
+        <ExperienceItem {...experience} />
+        {/* <p class="text-xl">Muy pronto...</p> */}
       </li>
     ))
   }
