--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,11 @@
-<footer class="rounded-lg shadow-sm m-4 bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10">
+<footer
+  class="rounded-lg shadow-sm m-4 bg-black/5 dark:bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10">
   <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-    <span class="text-sm sm:text-center text-yellow-200/90"
+    <span class="text-sm sm:text-center text-yellow-800/90 dark:text-yellow-200/90"
       >© 2025 <a href="https://github.com/Kcireog" class="hover:underline">Kcireog</a>. Con ayuda de midudev, su
       comunidad y un poco de mí.
     </span>
-    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-white/90 sm:mt-0">
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0">
       <li>
         <a href="#" class="hover:underline me-4 md:me-6">Sobre mí</a>
       </li>
