--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,8 @@ import SectionContainer from '../components/SectionContainer.astro';
   <main class="px-4">
     <SectionContainer class="py-44 pb-32">
       <img class="rounded-full w-12 h-12 mb-4" src="/images/Kophoto.webp" alt="kcire photo" />
-      <h1 class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10">
+      <h1
+        class="text-gray-900 dark:text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10">
         ¡Hola! Soy Erick <a
           href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/"
           target="_blank"
@@ -30,9 +31,11 @@ import SectionContainer from '../components/SectionContainer.astro';
         >
       </h1>
       <h2 class="text-xl lg:text-2xl text-balance max-w-[700px]">
-        <span class="text-yellow-200">Ingeniero de Sistemas y Desarrollador Backend</span>
-        <span class="text-red-200">de Ibagué, Colombia 🇨🇴.</span>
-        <!-- <span class="text-sky-200">Coming soon...</span> -->
+        <span>...</span><span class="text-yellow-800 dark:text-yellow-200">
+          Desarrollador Backend e .Ingeniero de Sistemas.</span
+        >
+        <span class="text-red-800 dark:text-red-200"> De Ibagué, Colombia 🇨🇴</span>.
+        <span class="text-sky-800 dark:text-sky-200">...</span>
       </h2>
 
       <nav class="flex gap-4 mt-4 flex-wrap">
