Fix: use explicit text-white in layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import SectionContainer from '../components/SectionContainer.astro';
       </h1>
       <h2 class="text-xl lg:text-2xl text-balance max-w-[700px]">
         <span>...</span><span class="text-yellow-800 dark:text-yellow-200">
-          Desarrollador Backend e .Ingeniero de Sistemas.</span
+          Ingeniero de Sistemas y Desarrollador Backend.</span
         >
         <span class="text-red-800 dark:text-red-200"> De Ibagué, Colombia 🇨🇴</span>.
         <span class="text-sky-800 dark:text-sky-200">...</span>
