Update light and dark mode

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -33,7 +33,7 @@ const PROJECTS = [
       <ul class="flex gap-x-4 flex-row mb-2">
         {tags.map((tag) => (
           <li>
-            <span class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2`}>
+            <span class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 border border-white/10`}>
               <tag.icon class="h-4 w-4" />
               {tag.name}
             </span>
