--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import SectionContainer from '../components/SectionContainer.astro';
           class="flex justify-center items-center"><Badge>Disponible para trabajar</Badge></a
         >
       </h1>
-      <h2 class="text-xl lg:text-2xl text-balance max-w-[700px]">
+      <h2 class="text-xl lg:text-2xl text-balance max-w-[700px] text-black dark:text-white">
         <span>...</span><span class="text-yellow-800 dark:text-yellow-200">
           Ingeniero de Sistemas y Desarrollador Backend.</span
         >
@@ -55,7 +55,7 @@ import SectionContainer from '../components/SectionContainer.astro';
     </SectionContainer>
 
     <SectionContainer id="experiencia">
-      <h2 class="text-3xl font-semibold mb-5 flex gap-x-3 items-center">
+      <h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center text-black/80 dark:text-white/80">
         <BriefCaseIcon class="w-7 h-7" />
         Experiencia Laboral
       </h2>
@@ -63,7 +63,7 @@ import SectionContainer from '../components/SectionContainer.astro';
     </SectionContainer>
 
     <SectionContainer id="proyectos">
-      <h2 class="text-3xl font-semibold mb-5 flex gap-x-3 items-center">
+      <h2 class="text-3xl font-semibold mb-5 flex gap-x-3 items-center text-black/80 dark:text-white/80">
         <CodeIcon class="w-7 h-7" />
         Proyectos
       </h2>
