--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,16 @@
 ---
-import Badge from '../components/Badge.astro';
-import Layout from '../layouts/Layout.astro';
-import LinkedInIcon from '../components/icons/LinkedIn.astro';
-import GitHubIcon from '../components/icons/GitHub.astro';
-import MailIcon from '../components/icons/Mail.astro';
-import BriefCaseIcon from '../components/icons/BriefCase.astro';
-import CodeIcon from '../components/icons/Code.astro';
-import SocialPill from '../components/SocialPill.astro';
-import Experience from '../components/Experience.astro';
-import Projects from '../components/Projects.astro';
-import SectionContainer from '../components/SectionContainer.astro';
+import AboutMe from '@/components/AboutMe.astro';
+import Badge from '@/components/Badge.astro';
+import Layout from '@/layouts/Layout.astro';
+import LinkedInIcon from '@/components/icons/LinkedIn.astro';
+import GitHubIcon from '@/components/icons/GitHub.astro';
+import MailIcon from '@/components/icons/Mail.astro';
+import BriefCaseIcon from '@/components/icons/BriefCase.astro';
+import CodeIcon from '@/components/icons/Code.astro';
+import SocialPill from '@/components/SocialPill.astro';
+import Experience from '@/components/Experience.astro';
+import Projects from '@/components/Projects.astro';
+import SectionContainer from '@/components/SectionContainer.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -68,6 +69,14 @@ import SectionContainer from '../components/SectionContainer.astro';
         Proyectos
       </h2>
       <Projects />
+    </SectionContainer>
+
+    <SectionContainer id="sobre-mi">
+      <h2 class="text-3xl font-semibold mb-5 flex gap-x-3 items-center text-black/80 dark:text-white/80">
+        <CodeIcon class="w-7 h-7" />
+        Sobre mi
+      </h2>
+      <AboutMe />
     </SectionContainer>
   </main>
 </Layout>
