--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,9 +15,9 @@
       bg-neutral-200 dark:bg-black/50
       backdrop-blur-2xl
     `}>
-    <a class="hover:bg-white/10 rounded-full px-3 transition" href="#experiencia">Experiencia</a>
-    <a class="hover:bg-white/10 rounded-full px-3 transition" href="#proyectos">Proyectos</a>
-    <a class="hover:bg-white/10 rounded-full px-3 transition" href="#sobre-mi">Sobre mí</a>
-    <a class="hover:bg-white/10 rounded-full px-3 transition" href="#contacto">Contacto</a>
+    <a class="hover:bg-white/10 rounded-full px-3 transition" href="/#experiencia">Experiencia</a>
+    <a class="hover:bg-white/10 rounded-full px-3 transition" href="/#proyectos">Proyectos</a>
+    <a class="hover:bg-white/10 rounded-full px-3 transition" href="/#sobre-mi">Sobre mí</a>
+    <a class="hover:bg-white/10 rounded-full px-3 transition" href="/#contacto">Contacto</a>
   </nav>
 </header>
