--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -2,5 +2,5 @@
   <div class="[&>p]:mb-4 [&>p>strong]:text-yellow-400 [&>p>strong]:font-semibold text-pretty">
     <p>Me llamo Erick Rodriguez.</p>
   </div>
-  <img src="/public/images/me.jpeg" class="rounded-full w-44 h-30" />
+  <img src=" /images/me.jpeg" class="rounded-full w-44 h-30" />
 </section>
