Update social and avaliable to work tags

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -60,7 +60,8 @@ const PROJECTS = [
           {video && (
             <LinkButton href={video}>
               <VideoLink class="w-6 h-6" />
-              Video resumen
+              Proximamente...
+              {/* Video resumen */}
             </LinkButton>
           )}
         </footer>
