Update responsive in about section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import SectionContainer from '@/components/SectionContainer.astro';
           href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/"
           target="_blank"
           rel="noopener"
-          class="flex justify-center items-center"><Badge>Disponible para trabajar</Badge></a
+          class="flex justify-center items-center hover:scale-105 transition"><Badge>Disponible para trabajar</Badge></a
         >
       </h1>
       <h2 class="text-xl lg:text-2xl text-balance max-w-[700px] text-black dark:text-white">
