--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,19 +7,12 @@
   w-full xl:w-[1120px]
   z-10
 `}>
-  <nav
-    class={`
-      border border-black rounded-full
-      px-3 py-1
-      flex flex-row items-center
-      bg-neutral-200 dark:bg-black/50
-      backdrop-blur-2xl
-    `}>
+  <nav id="header-nav">
     <a class="hover:bg-white/10 rounded-full px-2 sm:px-3 transition text-sm sm:text-base" href="/#experiencia"
       >Experiencia</a
     >
-    <a class="hover:bg-white/10 rounded-full px-3 transition" href="/#proyectos">Proyectos</a>
-    <a class="hover:bg-white/10 rounded-full px-3 transition" href="/#sobre-mi">Sobre mí</a>
-    <a class="hover:bg-white/10 rounded-full px-3 transition" href="/#contacto">Contacto</a>
+    <a class="hover:bg-neutral-300 dark:hover:bg-white/10 rounded-full px-3 transition" href="/#proyectos">Proyectos</a>
+    <a class="hover:bg-neutral-300 dark:hover:bg-white/10 rounded-full px-3 transition" href="/#sobre-mi">Sobre mí</a>
+    <a class="hover:bg-neutral-300 dark:hover:bg-white/10 rounded-full px-3 transition" href="/#contacto">Contacto</a>
   </nav>
 </header>
