--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,6 +1,10 @@
+---
+const personalImageAlt = 'Erick S Rodriguez Picture';
+---
+
 <section class="flex felx-col md:flex-row gap-8 justify-center items-center">
   <div class="[&>p]:mb-4 [&>p>strong]:text-yellow-400 [&>p>strong]:font-semibold text-pretty order-2 md:order-1">
     <p>Me llamo Erick Rodriguez.</p>
   </div>
-  <img src=" /images/me.jpeg" class="rounded-full w-44 h-30 order-1 md:order-2" />
+  <img src=" /images/me.jpeg" class="rounded-full w-44 h-30 order-1 md:order-2" alt={personalImageAlt} />
 </section>
