Fix: adjust visual style of tech tags in projects section

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,12 +7,12 @@ import LinkButton from './LinkButton.astro';
 const TAGS = {
   JAVA: {
     name: 'Java',
-    class: 'bg-[#ad9c8f] text-white',
+    class: 'bg-[#b28a6b] text-white',
     icon: Java,
   },
   SPRING: {
     name: 'Spring Boot',
-    class: 'bg-[#879681] text-white',
+    class: 'bg-[#67825c] text-white',
     icon: SpringBoot,
   },
 };
