--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,18 @@
+<script>
+  const $navAElements: Element[] = [...document.querySelectorAll('header nav a')];
+  window.addEventListener('scroll', () => {
+    $navAElements.forEach((a) => {
+      const selectionForSection = a.getAttribute('href')?.substring(1);
+      const sectionElement: HTMLDivElement | null = document.querySelector(selectionForSection || '');
+
+      if (!sectionElement) return;
+      const selectionTop = sectionElement.offsetTop - 150;
+      if (window.scrollY <= selectionTop) return;
+      $navAElements.forEach((aToRemove) => aToRemove.classList.remove('bg-white/15'));
+      a.classList.add('bg-white/15');
+    });
+  });
+</script>
 <header
   class={`
   flex justify-center items-center 
@@ -8,8 +23,9 @@
   z-10
 `}>
   <nav id="header-nav">
-    <a class="hover:bg-white/10 rounded-full px-2 sm:px-3 transition text-sm sm:text-base" href="/#experiencia"
-      >Experiencia</a
+    <a
+      class="hover:bg-neutral-300 dark:hover:bg-white/10 rounded-full px-2 sm:px-3 transition text-sm sm:text-base"
+      href="/#experiencia">Experiencia</a
     >
     <a class="hover:bg-neutral-300 dark:hover:bg-white/10 rounded-full px-3 transition" href="/#proyectos">Proyectos</a>
     <a class="hover:bg-neutral-300 dark:hover:bg-white/10 rounded-full px-3 transition" href="/#sobre-mi">Sobre mí</a>
