--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,21 +1,10 @@
-<script>
-  const $navAElements: Element[] = [...document.querySelectorAll('header nav a')];
-  window.addEventListener('scroll', () => {
-    $navAElements.forEach((a) => {
-      const selectionForSection = a.getAttribute('href')?.substring(1);
-      const sectionElement: HTMLDivElement | null = document.querySelector(selectionForSection || '');
+---
+import ThemeToggle from './ThemeToggle.astro';
+---
 
-      if (!sectionElement) return;
-      const selectionTop = sectionElement.offsetTop - 150;
-      if (window.scrollY <= selectionTop) return;
-      $navAElements.forEach((aToRemove) => aToRemove.classList.remove('bg-white/15'));
-      a.classList.add('bg-white/15');
-    });
-  });
-</script>
 <header
   class={`
-  flex justify-center items-center 
+  flex justify-center items-center  gap-x-3
   mx-auto
   py-5
   sticky top-0
@@ -31,4 +20,20 @@
     <a class="hover:bg-neutral-300 dark:hover:bg-white/10 rounded-full px-3 transition" href="/#sobre-mi">Sobre mí</a>
     <a class="hover:bg-neutral-300 dark:hover:bg-white/10 rounded-full px-3 transition" href="/#contacto">Contacto</a>
   </nav>
+  <ThemeToggle />
 </header>
+<script>
+  const $navAElements: Element[] = [...document.querySelectorAll('header nav a')];
+  window.addEventListener('scroll', () => {
+    $navAElements.forEach((a) => {
+      const selectionForSection = a.getAttribute('href')?.substring(1);
+      const sectionElement: HTMLDivElement | null = document.querySelector(selectionForSection || '');
+
+      if (!sectionElement) return;
+      const selectionTop = sectionElement.offsetTop - 150;
+      if (window.scrollY <= selectionTop) return;
+      $navAElements.forEach((aToRemove) => aToRemove.classList.remove('bg-white/15'));
+      a.classList.add('bg-white/15');
+    });
+  });
+</script>
