--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,24 @@
 ---
 import ThemeToggle from './ThemeToggle.astro';
+
+const navItems = [
+  {
+    title: 'Experiencia',
+    url: '/#experiencia',
+  },
+  {
+    title: 'Proyectos',
+    url: '/#proyectos',
+  },
+  {
+    title: 'Sobre mí',
+    url: '/#sobre-mi',
+  },
+  {
+    title: 'Contacto',
+    url: '/#contacto',
+  },
+];
 ---
 
 <header
@@ -12,14 +31,15 @@ import ThemeToggle from './ThemeToggle.astro';
   z-10
 `}>
   <nav id="header-nav">
-    <a
-      class="hover:bg-neutral-300 dark:hover:bg-white/10 rounded-full px-2 sm:px-3 transition text-sm sm:text-base"
-      href="/#experiencia">Experiencia</a
-    >
-    <a class="hover:bg-neutral-300 dark:hover:bg-white/10 rounded-full px-3 transition" href="/#proyectos">Proyectos</a>
-    <a class="hover:bg-neutral-300 dark:hover:bg-white/10 rounded-full px-3 transition" href="/#sobre-mi">Sobre mí</a>
-    <a class="hover:bg-neutral-300 dark:hover:bg-white/10 rounded-full px-3 transition" href="/#contacto">Contacto</a>
+    {
+      navItems.map((link) => (
+        <a class="hover:bg-white/10 rounded-full px-2 sm:px-3 transition text-sm sm:text-base" href={link.url}>
+          {link.title}
+        </a>
+      ))
+    }
   </nav>
+
   <ThemeToggle />
 </header>
 <script>
