Fix: header refactor and add transitions to layout

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -28,7 +28,7 @@ const PROJECTS = [
 ];
 ---
 
-<section class="flex flex-col gap-y-16">
+<div class="flex flex-col gap-y-16">
   {
     PROJECTS.map(({ image, title, description, tags, video, github }) => (
       <article>
@@ -68,4 +68,4 @@ const PROJECTS = [
       </article>
     ))
   }
-</section>
+</div>
