Feat: adjust layout, create some components and improve styles

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,9 +5,9 @@ import ExperienceItem from './icons/ExperienceItem.astro';
 const EXPERIENCE = [
   {
     date: '19/05/2025',
-    title: 'hola',
-    description: 'estamos aqui',
-    link: 'https://www.youtube.com/watch?v=atBKaTger1M',
+    title: 'holaaaaaaaaaaaaaa',
+    description: 'estamos aquiiiiiiiiiiiiiiiiiiiiiiii',
+    link: '#',
   },
   // {
   //   date: '',
@@ -18,10 +18,10 @@ const EXPERIENCE = [
 ];
 ---
 
-<ol class="relative border-s border-gray-200 ml-3">
+<ol class="relative mt-16">
   {
     EXPERIENCE.map((experience) => (
-      <li class="mb-10 ms-4">
+      <li class="">
         <ExperienceItem {...experience} />
         {/* <p class="text-xl">Muy pronto...</p> */}
       </li>
