--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,18 +4,18 @@ const currentYear = new Date().getFullYear();
 
 <footer
   class="rounded-lg shadow-sm m-4 bg-black/5 dark:bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10">
-  <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-    <span class="text-sm sm:text-center text-yellow-800/90 dark:text-yellow-200/90"
+  <div class="w-full max-w-screen-xl p-4 mx-auto md:flex md:items-center md:justify-between">
+    <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
       >© 2025-{currentYear}
       <a href="https://github.com/Kcireog" class="hover:underline">Kcireog</a>. Con ayuda de midudev, su comunidad y un
       poco de mí.
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0">
       <li>
-        <a href="#" class="hover:underline me-4 md:me-6">Sobre mí</a>
+        <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
       </li>
       <li>
-        <a href="#" class="hover:underline">Contacto</a>
+        <a href="mailto:rodriguezsantiago0230@hotmail.com" class="hover:underline">Contacto</a>
       </li>
     </ul>
   </div>
