--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -3,6 +3,7 @@ import GitHub from './icons/GitHub.astro';
 import VideoLink from './icons/VideoLink.astro';
 import Java from '../components/icons/Java.astro';
 import SpringBoot from '../components/icons/SpringBoot.astro';
+import Link from '../components/icons/Link.astro';
 import LinkButton from './LinkButton.astro';
 const TAGS = {
   JAVA: {
@@ -31,40 +32,50 @@ const PROJECTS = [
 <div class="flex flex-col gap-y-16">
   {
     PROJECTS.map(({ image, title, description, tags, video, github }) => (
-      <article>
-        <h3 class="text-2xl font-semibold text-yellow-800 dark:text-yellow-200 mb-2">{title}</h3>
-        <p class="text-lg mb-4 text-pretty">{description}</p>
-        <ul class="flex gap-x-2 flex-row mb-2">
-          {tags.map((tag) => (
-            <li>
-              <span class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 `}>
-                <tag.icon class="w-4 h-4" />
-                {tag.name}
-              </span>
-            </li>
-          ))}
-        </ul>
-        <img
-          loading="lazy"
-          class="rounded shadow-2xl shadow-white/10 aspect-video"
-          src={image}
-          alt={`Captura de pantalla del proyecto ${image}`}
-        />
-        <footer class="flex gap-x-4 items-end justify-start mt-4">
-          {github && (
-            <LinkButton href={github}>
-              <GitHub class="w-6 h-6" />
-              Ver código fuente
-            </LinkButton>
-          )}
-          {video && (
-            <LinkButton href={video}>
-              <VideoLink class="w-6 h-6" />
-              Proximamente...
-              {/* Video resumen */}
-            </LinkButton>
-          )}
-        </footer>
+      <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
+        <div class="w-full md:w-1/2">
+          <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
+            <img
+              alt="project"
+              class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105"
+              loading="lazy"
+              src={image}
+            />
+          </div>
+        </div>
+
+        <div class="w-full md:w-1/2 md:max-w-lg">
+          <h3 class="text-2xl font-bold text-gray-800 dark:text-gray-100">{title}</h3>
+          <div class="flex flex-wrap mt-2">
+            <ul class="flex flex-row mb-2 gap-x-2">
+              {tags.map((tag) => (
+                <li>
+                  <span class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 `}>
+                    <tag.icon class="w-4 h-4" />
+                    {tag.name}
+                  </span>
+                </li>
+              ))}
+            </ul>
+
+            <div class="mt-2 text-gray-700 dark:text-gray-400">{description}</div>
+            <footer class="flex items-end justify-start mt-4 gap-x-4">
+              {github && (
+                <LinkButton href={github}>
+                  <GitHub class="w-6 h-6" />
+                  Code
+                </LinkButton>
+              )}
+              {video && (
+                <LinkButton href={video}>
+                  <VideoLink class="w-6 h-6" />
+                  Proximamente...
+                  {/* Video resumen */}
+                </LinkButton>
+              )}
+            </footer>
+          </div>
+        </div>
       </article>
     ))
   }
