--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,13 @@
 ---
 import AboutMe from '@/components/AboutMe.astro';
-import Badge from '@/components/Badge.astro';
 import Layout from '@/layouts/Layout.astro';
-import LinkedInIcon from '@/components/icons/LinkedIn.astro';
-import GitHubIcon from '@/components/icons/GitHub.astro';
-import MailIcon from '@/components/icons/Mail.astro';
-import BriefCaseIcon from '@/components/icons/BriefCase.astro';
+import Briefcase from '@/components/icons/BriefCase.astro';
+import ProfileCheck from '@/components/icons/ProfileCheck.astro';
 import CodeIcon from '@/components/icons/Code.astro';
-import SocialPill from '@/components/SocialPill.astro';
 import Experience from '@/components/Experience.astro';
+import TitleSection from '@/components/TitleSection.astro';
 import Projects from '@/components/Projects.astro';
+import Hero from '@/components/Hero.astro';
 import SectionContainer from '@/components/SectionContainer.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -20,63 +18,33 @@ import SectionContainer from '@/components/SectionContainer.astro';
   title="Porfolio de Erick - Desarrollador Backend "
   description="Contrata a Erick Reinoso, Desarrollador Backend especializado en Java y Spring Boot. Ingeniero de Sistemas enfocado en construir arquitecturas sólidas, seguras y eficientes para aplicaciones web modernas.">
   <main class="px-4">
-    <SectionContainer class="py-44 pb-32">
-      <img class="rounded-full w-12 h-12 mb-4" src="/images/Kophoto.webp" alt="kcire photo" />
-      <h1
-        class="text-gray-900 dark:text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10">
-        ¡Hola! Soy Erick <a
-          href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/"
-          target="_blank"
-          rel="noopener"
-          class="flex justify-center items-center hover:scale-105 transition"><Badge>Disponible para trabajar</Badge></a
-        >
-      </h1>
-      <h2 class="text-xl lg:text-2xl text-balance max-w-[700px] text-black dark:text-white">
-        <span>...</span><span class="text-yellow-800 dark:text-yellow-200">
-          Ingeniero de Sistemas y Desarrollador Backend.</span
-        >
-        <span class="text-red-800 dark:text-red-200"> De Ibagué, Colombia 🇨🇴</span>.
-        <span class="text-sky-800 dark:text-sky-200">...</span>
-      </h2>
-
-      <nav class="flex gap-4 mt-4 flex-wrap">
-        <SocialPill href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/">
-          <LinkedInIcon class="w-4 md:w-6 h-6" LinkedIn < a />
-          LinkedIn
-        </SocialPill>
-        <SocialPill href="https://github.com/Kcireog">
-          <GitHubIcon class="w-4 md:w-6 h-6" GitHub < a />
-          GitHub
-        </SocialPill>
-        <SocialPill href="mailto:prueba@gmail.com">
-          <MailIcon class="w-4 md:w-6 h-6" Mail < a />
-          prueba@gmail.com
-        </SocialPill>
-      </nav>
+    <SectionContainer class="py-16 md:py-36">
+      <Hero />
     </SectionContainer>
-
+  </main>
+  <div class="space-y-24">
     <SectionContainer id="experiencia">
-      <h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center text-black/80 dark:text-white/80">
-        <BriefCaseIcon class="w-7 h-7" />
-        Experiencia Laboral
-      </h2>
+      <TitleSection>
+        <Briefcase class="size-8" />
+        Experiencia laboral
+      </TitleSection>
       <Experience />
     </SectionContainer>
 
     <SectionContainer id="proyectos">
-      <h2 class="text-3xl font-semibold mb-5 flex gap-x-3 items-center text-black/80 dark:text-white/80">
-        <CodeIcon class="w-7 h-7" />
+      <TitleSection>
+        <CodeIcon class="size-7" />
         Proyectos
-      </h2>
+      </TitleSection>
       <Projects />
     </SectionContainer>
 
     <SectionContainer id="sobre-mi">
-      <h2 class="text-3xl font-semibold mb-5 flex gap-x-3 items-center text-black/80 dark:text-white/80">
-        <CodeIcon class="w-7 h-7" />
-        Sobre mi
-      </h2>
+      <TitleSection>
+        <ProfileCheck class="size-8" />
+        Sobre mí
+      </TitleSection>
       <AboutMe />
     </SectionContainer>
-  </main>
+  </div>
 </Layout>
