Update title icons size

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,6 +7,7 @@ import GitHubIcon from '@/components/icons/GitHub.astro';
 import SocialPill from '@/components/SocialPill.astro';
 ---
 
+<!-- VERSION FINAL, SOLO MODIFICAR TEXTO -->
 <div class="max-w-xl">
   <div class="flex gap-4 mb-4">
     <img class="rounded-full shadow-lg w-16 h-16" src="/public/images/Kophoto.webp" alt={personalImageAlt} />
