--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import SectionContainer from '@/components/SectionContainer.astro';
   <div class="space-y-24">
     <SectionContainer id="experiencia">
       <TitleSection>
-        <Briefcase class="size-8" />
+        <Briefcase class="w-8 h-8" />
         Experiencia laboral
       </TitleSection>
       <Experience />
@@ -33,7 +33,7 @@ import SectionContainer from '@/components/SectionContainer.astro';
 
     <SectionContainer id="proyectos">
       <TitleSection>
-        <CodeIcon class="size-7" />
+        <CodeIcon class="w-7 h-7" />
         Proyectos
       </TitleSection>
       <Projects />
@@ -41,7 +41,7 @@ import SectionContainer from '@/components/SectionContainer.astro';
 
     <SectionContainer id="sobre-mi">
       <TitleSection>
-        <ProfileCheck class="size-8" />
+        <ProfileCheck class="w-8 h-8" />
         Sobre mí
       </TitleSection>
       <AboutMe />
