Fix: move ExperienceItem to right folder and some corrections in AboutMe.astro and Hero.astro syntax

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import SocialPill from '@/components/SocialPill.astro';
 <!-- VERSION FINAL, SOLO MODIFICAR TEXTO -->
 <div class="max-w-xl">
   <div class="flex gap-4 mb-4">
-    <img class="rounded-full shadow-lg w-16 h-16" src="/public/images/Kophoto.webp" alt={personalImageAlt} />
+    <img class="rounded-full shadow-lg w-16 h-16" src="/images/Kophoto.webp" alt={personalImageAlt} />
     <a
       href="https://www.linkedin.com/in/erick-santiago-rodriguez-reinoso/"
       target="_blank"
