--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -1,5 +1,5 @@
 ---
-import LinkInline from '../LinkInline.astro';
+import LinkInline from './LinkInline.astro';
 
 interface Props {
   title: string;
@@ -34,7 +34,7 @@ const { title, description, link, date } = Astro.props;
     {
       link && (
         <LinkInline href={link}>
-          Sabes más{' '}
+          Saber más{' '}
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="w-5 icon icon-tabler icon-tabler-chevron-right"
