Improve experience section

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,17 +1,19 @@
 ---
 import { date } from 'astro:schema';
-import ExperienceItem from './icons/ExperienceItem.astro';
+import ExperienceItem from './ExperienceItem.astro';
 
 const EXPERIENCE = [
   {
     date: '19/05/2025',
     title: 'holaaaaaaaaaaaaaa',
+    company: 'compañia',
     description: 'estamos aquiiiiiiiiiiiiiiiiiiiiiiii',
-    link: '#',
+    link: '',
   },
   // {
   //   date: '',
   //   title: '',
+  //   company: '',
   //   description: '',
   //   link: '#',
   // },
