Fix responsive issues

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,8 +3,9 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer
-  class="rounded-lg shadow-sm m-4 bg-black/5 dark:bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10">
-  <div class="w-full max-w-screen-xl p-4 mx-auto md:flex md:items-center md:justify-between">
+  class="rounded-lg shadow-sm m-4 bg-black/5 dark:bg-black/20 backdrop-blur-lg w-full mx-auto container lg:max-2-4xl md:max-w-2xl
+  mb-10 flex justify-center">
+  <div class="w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between">
     <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
       >© 2025-{currentYear}
       <a href="https://github.com/Kcireog" class="hover:underline">Kcireog</a>. Con ayuda de midudev, su comunidad y un
