Fix: update contact url in header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@ const navItems = [
   {
     title: 'Contacto',
     label: 'contacto',
-    url: '/#contacto',
+    url: 'mailto:rodriguezsantiago0230@hotmail.com',
   },
 ];
 ---
