Add a new project

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -26,6 +26,15 @@ const PROJECTS = [
     image: '/projects/literaluraProject.webp',
     tags: [TAGS.JAVA, TAGS.SPRING],
   },
+  {
+    title: 'Java Exercises',
+    description:
+      'Colección de ejercicios hechos en java, organizados por temática. Creado Con el proposito de practicar y fortalecer las bases tecnicas, para estar preparado para futuras pruebas tecnicas y desarrollar más confianza en el desarrollo de las mismas.',
+    video: '#',
+    github: 'https://github.com/Kcireog/Java-Exercises',
+    image: '/projects/javaexcersisesProject.webp',
+    tags: [TAGS.JAVA],
+  },
 ];
 ---
 
