feat: add academic experience section -Add AcademicExperience component with education background -Add Library icon for the new section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import SectionContainer from '@/components/SectionContainer.astro';
     <SectionContainer id="experiencia">
       <TitleSection>
         <Library class="w-8 h-8" />
-        Experiencia Academica
+        Experiencia Académica
       </TitleSection>
       <AcademyExperience />
     </SectionContainer>
