Fix typo: rename AcademyExperience to AcademicExperience

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Library from '@/components/icons/Library.astro';
 import ProfileCheck from '@/components/icons/ProfileCheck.astro';
 import CodeIcon from '@/components/icons/Code.astro';
 // import Experience from '@/components/Experience.astro';
-import AcademyExperience from '@/components/AcademyExperience.astro';
+import AcademicExperience from '@/components/AcademicExperience.astro';
 import TitleSection from '@/components/TitleSection.astro';
 import Projects from '@/components/Projects.astro';
 import Hero from '@/components/Hero.astro';
@@ -30,7 +30,7 @@ import SectionContainer from '@/components/SectionContainer.astro';
         <Library class="w-8 h-8" />
         Experiencia Académica
       </TitleSection>
-      <AcademyExperience />
+      <AcademicExperience />
     </SectionContainer>
 
     <SectionContainer id="proyectos">
