style: refresh Java icon and update tag styling

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,7 +8,7 @@ import LinkButton from './LinkButton.astro';
 const TAGS = {
   JAVA: {
     name: 'Java',
-    class: 'bg-[#b28a6b] text-white',
+    class: 'bg-[#ddaf87] text-white',
     icon: Java,
   },
   SPRING: {
